--- a/requirements.txt
+++ b/requirements.txt
@@ -6,15 +6,19 @@ click==8.2.1
 cloudscraper==1.2.71
 colorama==0.4.6
 Flask==3.1.1
+gunicorn==23.0.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.6
 MarkupSafe==3.0.2
+packaging==25.0
 pyparsing==3.2.3
+python-dotenv==1.1.0
+redis==6.2.0
 requests==2.32.3
 requests-toolbelt==1.0.0
 soupsieve==2.7
+spotipy==2.25.1
 typing_extensions==4.13.2
 urllib3==2.4.0
 Werkzeug==3.1.3
-gunicorn
